--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -2,137 +2,181 @@
 <div class="wrapper">
   <div class="page-header">
     <div class="page-header-image"></div>
-    <div class="content">
+    <div class="square square-1" id="square1"></div>
+    <div class="square square-2" id="square2"></div>
+    <div class="square square-3" id="square3"></div>
+    <div class="square square-6" id="square6"></div>
+    <div class="square square-7" id="square7"></div>
+    <div class="square square-8" id="square8"></div>
       <div class="container">
+        <div class="content-center">
         <div class="row">
-          <div class="col-lg-10 col-md-6 offset-lg-0 offset-md-3">
-            <div class="square square-7" id="square7"></div>
-            <div class="square square-8" id="square8"></div>
+          <div class="col-8">
+            <br>
+            <br>
             <div class="card card-register">
-              <div class="card-header">
-                <img
-                  alt="Card image"
-                  class="card-img"
-                  src="assets/img/square1-red.png"
-                />
-
-                <h3 class="card-title">Registro</h3>
-              </div>
+              <h3 class="card-title">Registro Pacientes</h3>
               <div class="card-body">
                 <form class="form" [formGroup]="form">
-                        <div class="row">
-                          <div class="col-6">
-                            <div class="input-group" [ngClass]="{ 'input-group-focus': focus === true }">
-                              <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                  <i class="tim-icons icon-single-02"> </i>
-                                </div>
-                              </div>
-                              <input class="form-control" placeholder="Nombre"
-                                type="text" (focus)="focus = true" (blur)="focus = false"formControlName="Nombre"/>          
-                            </div>
-                          </div>
-                          <div class="col-6">
-                            <div class="input-group" [ngClass]="{ 'input-group-focus': focus1 === true }">
-                              <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                  <i class="tim-icons icon-single-02"> </i>
-                                </div>
-                              </div>
-                              <input class="form-control" placeholder="Apellido"
-                                type="text" (focus)="focus1 = true" (blur)="focus1 = false"formControlName="Apellido"/>
-                            </div>
-                          </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <div class="form-group">
+                        <input type="text" id="nombre" formControlName="nombre" class="form-control" placeholder="Nombre" [ngClass]="{ 'is-invalid': submitted && f.nombre.errors?.required }">               
+                        <div *ngIf="submitted && f.nombre.errors?.required" class="invalid-feedback"
+                          autocomplete="nombre">
+                          <div *ngIf="f.nombre.errors?.required">Debe ingresar un nombre.</div>
                         </div>
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="form-group">
+                        <input type="text" id="apellido" formControlName="apellido" class="form-control" placeholder="Apellido" [ngClass]="{ 'is-invalid': submitted && f.apellido.errors?.required }">               
+                        <div *ngIf="submitted && f.apellido.errors?.required" class="invalid-feedback"
+                          autocomplete="apellido">
+                          <div *ngIf="f.apellido.errors?.required">Debe ingresar un Apellido.</div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
                     <div class="row">
-                        <div class="col-6">
-                          <div class="input-group" [ngClass]="{ 'input-group-focus': focus3 === true }">
-                            <div class="input-group-prepend">
-                              <div class="input-group-text">
-                                <i class="tim-icons icon-single-02"> </i>
-                              </div>
-                            </div>
-                            <input class="form-control" placeholder="Dni"
-                              type="number" (focus)="focus3= true"  (blur)="focus3 = false"formControlName="Dni"/>
+                      <div class="col-6">
+                        <div class="form-group">
+                          <input type="text" id="email" formControlName="email" class="form-control" placeholder="Email" [ngClass]="{ 'is-invalid': submitted && f.email.errors?.required }">               
+                          <div *ngIf="submitted && f.email.errors?.required" class="invalid-feedback"
+                            autocomplete="email">
+                            <div *ngIf="f.email.errors?.required">Debe ingresar un email.</div>
                           </div>
                         </div>
-                        <div class="col-6">
-                          <div class="input-group" [ngClass]="{ 'input-group-focus': focus4 === true }">
-                            <div class="input-group-prepend">
-                              <div class="input-group-text">
-                                <i class="tim-icons icon-single-02"> </i>
-                              </div>
-                            </div>
-                            <input class="form-control" placeholder="Edad"
-                              type="number" (focus)="focus4 = true" (blur)="focus4 = false"formControlName="Edad"/>
+                      </div>
+                      <div class="col-6">
+                        <div class="form-group">
+                          <input type="text" id="password" formControlName="password" class="form-control" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && f.password.errors?.required }">               
+                          <div *ngIf="submitted && f.password.errors?.required" class="invalid-feedback"
+                            autocomplete="password">
+                            <div *ngIf="f.password.errors?.required">Debe ingresar un password.</div>
                           </div>
                         </div>
-                    </div>
+                      </div>
+                  </div>
                   <div class="row">
                     <div class="col-6">
-                      <div class="input-group" [ngClass]="{ 'input-group-focus': focus5 === true }">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text">
-                            <i class="tim-icons icon-single-02"> </i>
-                          </div>
+                      <div class="form-group">
+                        <select id="sexo" formControlName="sexo" class="form-control" placeholder="seleccione">
+                          <option selected value="">Seleccione Sexo</option>
+                          <option >Masculino</option>
+                          <option>Femenino</option>
+                          <option>otros</option>
+                        </select>
+                        <div *ngIf="submitted && f.sexo.errors?.required" class="invalid-feedback">
+                          <div *ngIf="f.sexo.errors?.required">Seleccione sexo</div>
                         </div>
-                        <input class="form-control" placeholder="Sexo"
-                          type="number" (focus)="focus5 = true" (blur)="focus5 = false"formControlName="Sexo"/>
-                      </div>
+                    </div>
                     </div>
                     <div class="col-6">
-                      <div class="input-group" [ngClass]="{ 'input-group-focus': focus6 === true }">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text">
-                            <i class="tim-icons icon-single-02"> </i>
-                          </div>
+                      <div class="form-group">
+                        <input type="text" id="edad" formControlName="edad" class="form-control" placeholder="Edad" [ngClass]="{ 'is-invalid': submitted && f.edad.errors?.required }">               
+                        <div *ngIf="submitted && f.edad.errors?.required" class="invalid-feedback"
+                          autocomplete="edad">
+                          <div *ngIf="f.edad.errors?.required">Debe ingresar las edad.</div>
                         </div>
-                        <input class="form-control" placeholder="Nacionalidad"
-                          type="number" (focus)="focus6 = true" (blur)="focus6 = false" formControlName="Nacionalidad"/>
-                      </div>  
-                    </div>
-                  </div>      
-                  <div class="row">
-                    <div class="col-6">
-                      <div class="input-group" [ngClass]="{ 'input-group-focus': focus7 === true }">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text">
-                            <i class="tim-icons icon-email-85"> </i>
-                          </div>
-                        </div>
-                        <input class="form-control" placeholder="Email" type="email"
-                          (focus)="focus7 = true" (blur)="focus7 = false" formControlName="Email"/>
-                      </div>
-                    </div>
-                    <div class="col-6">              
-                      <div class="input-group"[ngClass]="{ 'input-group-focus': focus8 === true }">
-                        <div class="input-group-prepend">
-                          <div class="input-group-text">
-                            <i class="tim-icons icon-lock-circle"> </i>
-                          </div>
-                        </div>
-                        <input class="form-control"placeholder="Password" type="password"
-                        (focus)="focus8 = true" (blur)="focus8 = false" formControlName="Password"/>
                       </div>
                     </div>
                   </div>
+                  <div class="row">      
+                    <div class="col-6">
+                      <div class="form-group">
+                        <select id="tipoDni" formControlName="tipoDni" class="form-control" placeholder="seleccione">
+                          <option selected value="">Tipo Dni</option>
+                          <option >DNI</option>
+                          <option>LE</option>
+                          <option >LC</option>
+                          <option>otros</option>
+                        </select>
+                        <div *ngIf="submitted && f.tipoDni.errors?.required" class="invalid-feedback">
+                          <div *ngIf="f.tipoDni.errors?.required">Seleccione Tipo</div>
+                        </div>
+                    </div>             
+                    </div>
+                    <div class="col-6">
+                      <div class="form-group">
+                        <input type="text" id="dni" formControlName="dni" class="form-control" placeholder="Dni" [ngClass]="{ 'is-invalid': submitted && f.dni.errors?.required }">               
+                        <div *ngIf="submitted && f.dni.errors?.required" class="invalid-feedback"
+                          autocomplete="dni">
+                          <div *ngIf="f.dni.errors?.required">Debe ingresar un Dni.</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <div class="form-group">
+                        <select id="planMedico" formControlName="planMedico" class="form-control" placeholder="seleccione">
+                          <option selected value="">Plan Medico</option>
+                          <option>UTN-10</option>
+                          <option>UTN-20</option>
+                          <option>UTN-30</option>
+                          <option>UTN-40</option>
+                        </select>
+                        <div *ngIf="submitted && f.planMedico.errors?.required" class="invalid-feedback">
+                          <div *ngIf="f.planMedico.errors?.required">Seleccione plan Medico</div>
+                        </div>
+                    </div>
+                   </div>
+                    <div class="col-6">
+                        <div class="form-group">
+                          <select id="nacionalidad" formControlName="nacionalidad" class="form-control" placeholder="seleccione">
+                            <option selected value="">Nacionalidad</option>
+                            <option >Argentina</option>
+                            <option> Venezuela</option>
+                            <option> Colombia</option>
+                            <option >Brasil</option>
+                            <option>Mexico</option>
+                          </select>
+                          <div *ngIf="submitted && f.nacionalidad.errors?.required" class="invalid-feedback">
+                            <div *ngIf="f.nacionalidad.errors?.required">seleccione Nacionalidad.</div>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="input-group">
+                          <label class="input-group-btn">
+                              <span class="btn btn-danger">
+                                  Cargar foto:<input type="file" style="display: none;" accept=".png, .jpg" (change)="onUpload($event)" formControlName="imagen">
+                              </span>
+                          </label>
+                          <input type="text" formControlName="imagenUser" class="form-control" readonly [value]="urlImage | async">
+                      </div>
+                  </div>                
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                    <div class="form-group">
+                      <ngx-recaptcha2 (resolved)="resolved($event)" #captchaElem [siteKey]="key" [size]="'normal'" [hl]="'es'" [theme]="'light'" [type]="'image'" formControlName="recaptcha">
+                      </ngx-recaptcha2>  
+                    </div>  
+                    </div>
+                  </div>
+                    <div class="row">
+                      <small *ngIf="error" class="text-danger font-weight-bold"><i class="fa fa-times"></i> {{errorMessage}} </small>
+                      <small *ngIf="success" class="text-success font-weight-bold"><i class="fas fa-check"></i> Especialidad registrada
+                        correctamente. </small>
+                    </div>
+                      <hr>
+                      <div class="row">
+                        <div class="col-6">
+                          <button type="submit" class="btn btn-primary" (click)="registrarse()">Registrar</button><br>
+                        </div>
+                        <div class="col-6">
+                          <button type="submit" class="btn btn-secondary" (click)="cerrar()">Cancelar</button><br>
+                        </div>
+                      </div>
                 </form>
-              </div>
-              <div class="card-footer">
-                <a class="btn btn-danger btn-round btn-lg" (click)="registrarse()" >
-                  Registrarse
-                </a>
               </div>
             </div>
           </div>
-        </div>
-        <div class="register-bg"></div>
-        <div class="square square-1" id="square1"></div>
-        <div class="square square-2" id="square2"></div>
-        <div class="square square-3" id="square3"></div>
-        <div class="square square-4" id="square4"></div>
-        <div class="square square-5" id="square5"></div>
-        <div class="square square-6" id="square6"></div>
+        </div>     
       </div>
     </div>
   </div>
