--- a/src/app/pages/turnos-home/registro-turno/registro-turno.component.html
+++ b/src/app/pages/turnos-home/registro-turno/registro-turno.component.html
@@ -1,4 +1,4 @@
-<app-navmenu></app-navmenu>
+<app-navmenu [usuario]="user" [estaLogueado]="isLogueado" ></app-navmenu>
 <div class="wrapper">
   <div class="page-header">
     <div class="page-header-image"></div>
@@ -16,13 +16,13 @@
             <br>
             <br>
             <div class="card card-register">
-              <h3 class="card-title">Registro Turno</h3>
+              <h3 class="card-title">Paciente : </h3>
               <div class="card-body">
             <form [formGroup]="form" (keyup.enter)="Submit()">
                 <div class="row">
-                <div class="col-4">
+                <div class="col-6">
                     <div class="form-group">
-                        <select id="especialidad" formControlName="especialidad" class="form-control" placeholder="seleccione">
+                        <select id="especialidad" formControlName="especialidad" (change)="especialidadChange(esp)" class="form-control" placeholder="seleccione">
                             <option selected value="">Seleccione Especialidad</option>
                             <option *ngFor="let esp of listaEspecialidad">{{esp.nombre}}</option>
                         </select>
@@ -31,9 +31,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-6">
                     <div class="form-group">
-                    <select id="especialidad" formControlName="especialidad" class="form-control" placeholder="seleccione">
+                    <select id="especialidad" formControlName="especialidad" (change)="profesionalChange(esp)" class="form-control" placeholder="seleccione">
                         <option selected value="">Seleccione Profesional</option>
                         <option *ngFor="let esp of listaEspecialidad">{{esp.nombre}}</option>
                     </select>
@@ -42,175 +42,42 @@
                     </div>
                 </div>
                 </div>              
-                <div class="col-4">
-                    <div class="form-group">
-                    <input type="text" id="nombre" formControlName="nombre" class="form-control" placeholder="Nombre" [ngClass]="{ 'is-invalid': submitted && f.nombre.errors?.required }">               
-                    <div *ngIf="submitted && f.nombre.errors?.required" class="invalid-feedback"
-                        autocomplete="nombre">
-                        <div *ngIf="f.nombre.errors?.required">Debe ingresar un nombre.</div>
-                    </div>
-                    </div>
+            </div>                        
+                <div class="row" *ngIf="onDias">
+                <div class="col-10">
+               <p class="text-success">Dias disponibles</p>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="text-center">#</th>
+                                <th>Profesional</th>
+                                <th>Especialidad</th>
+                                <th>Dia</th>
+                                <th>Disponible</th>
+                                <th class="text-right">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="text-center">1</td>
+                                <td>dr marcos</td>
+                                <td>Clinica</td>
+                                <td>10/10/2020</td>
+                                <td>si</td>
+                                <td class="td-actions text-right">
+                                    <button type="button" rel="tooltip" class="btn btn-info btn-simple btn-icon btn-sm">
+                                        <i class="tim-icons icon-single-02"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>                
+        </div>
                 </div>
-            </div>
-             <div class="row">
-                <div class="col-6">
-                    <div class="form-group">
-                    <input type="text" id="apellido" formControlName="apellido" class="form-control" placeholder="Apellido" [ngClass]="{ 'is-invalid': submitted && f.apellido.errors?.required }">               
-                    <div *ngIf="submitted && f.apellido.errors?.required" class="invalid-feedback"
-                        autocomplete="apellido">
-                        <div *ngIf="f.apellido.errors?.required">Debe ingresar un Apellido.</div>
-                    </div>
-                    </div>
-                </div>
-            </div>
-                <div class="row">
-                    <div class="col-6">
-                    <div class="form-group">
-                        <input type="text" id="email" formControlName="email" class="form-control" placeholder="Email" [ngClass]="{ 'is-invalid': submitted && f.email.errors?.required }">               
-                        <div *ngIf="submitted && f.email.errors?.required" class="invalid-feedback"
-                        autocomplete="email">
-                        <div *ngIf="f.email.errors?.required">Debe ingresar un email.</div>
-                        </div>
-                    </div>
-                    </div>
-                    <div class="col-6">
-                    <div class="form-group">
-                        <input type="text" id="password" formControlName="password" class="form-control" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && f.password.errors?.required }">               
-                        <div *ngIf="submitted && f.password.errors?.required" class="invalid-feedback"
-                        autocomplete="password">
-                        <div *ngIf="f.password.errors?.required">Debe ingresar un password.</div>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-                <div class="row">
-                <div class="col-6">
-                    <div class="form-group">
-                    <select id="sexo" formControlName="sexo" class="form-control" placeholder="seleccione">
-                        <option selected value="">Seleccione Sexo</option>
-                        <option >Masculino</option>
-                        <option>Femenino</option>
-                        <option>otros</option>
-                    </select>
-                    <div *ngIf="submitted && f.sexo.errors?.required" class="invalid-feedback">
-                        <div *ngIf="f.sexo.errors?.required">Seleccione sexo</div>
-                    </div>
-                </div>
-                </div>
-                <div class="col-6">
-                    <div class="form-group">
-                    <input type="text" id="edad" formControlName="edad" class="form-control" placeholder="Edad" [ngClass]="{ 'is-invalid': submitted && f.edad.errors?.required }">               
-                    <div *ngIf="submitted && f.edad.errors?.required" class="invalid-feedback"
-                        autocomplete="edad">
-                        <div *ngIf="f.edad.errors?.required">Debe ingresar las edad.</div>
-                    </div>
-                    </div>
-                </div>
-                </div>
-                <div class="row">      
-                <div class="col-6">
-                    <div class="form-group">
-                    <select id="tipoDni" formControlName="tipoDni" class="form-control" placeholder="seleccione">
-                        <option selected value="">Tipo Dni</option>
-                        <option >DNI</option>
-                        <option>LE</option>
-                        <option >LC</option>
-                        <option>otros</option>
-                    </select>
-                    <div *ngIf="submitted && f.tipoDni.errors?.required" class="invalid-feedback">
-                        <div *ngIf="f.tipoDni.errors?.required">Seleccione Tipo</div>
-                    </div>
-                </div>             
-                </div>
-                <div class="col-6">
-                    <div class="form-group">
-                    <input type="text" id="dni" formControlName="dni" class="form-control" placeholder="Dni" [ngClass]="{ 'is-invalid': submitted && f.dni.errors?.required }">               
-                    <div *ngIf="submitted && f.dni.errors?.required" class="invalid-feedback"
-                        autocomplete="dni">
-                        <div *ngIf="f.dni.errors?.required">Debe ingresar un Dni.</div>
-                    </div>
-                    </div>
-                </div>
-                </div>
-                <div class="row">
-                <div class="col-6">
-                    <div class="form-group">
-                    <select id="horario" formControlName="horario" class="form-control" placeholder="seleccione">
-                        <option selected value="">Horario</option>
-                        <option>09-14</option>
-                        <option>14-20</option>
-                        <option>12-20</option>
-                        <option>otros</option>
-                    </select>
-                    <div *ngIf="submitted && f.horario.errors?.required" class="invalid-feedback">
-                        <div *ngIf="f.horario.errors?.required">Seleccione Horario</div>
-                    </div>
-                </div>
-                </div>
-                <div class="col-6">
-                    <div class="form-group">
-                        <select id="nacionalidad" formControlName="nacionalidad" class="form-control" placeholder="seleccione">
-                        <option selected value="">Nacionalidad</option>
-                        <option >Argentina</option>
-                        <option> Venezuela</option>
-                        <option> Colombia</option>
-                        <option >Brasil</option>
-                        <option>Mexico</option>
-                        </select>
-                        <div *ngIf="submitted && f.nacionalidad.errors?.required" class="invalid-feedback">
-                        <div *ngIf="f.nacionalidad.errors?.required">seleccione Nacionalidad.</div>
-                        </div>
-                    </div>
-                </div>
-                </div>
-                <div class="row">
-                <div class="col-2">
-                    <div class="form-check">
-                    <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" formControlName="lunes">
-                        <span class="form-check-sign">                    
-                        </span> Lunes </label>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="form-check">
-                    <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" formControlName="martes">
-                        <span class="form-check-sign">    
-                        </span> Martes </label>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="form-check">
-                    <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" formControlName="miercoles">
-                        <span class="form-check-sign">                   
-                        </span> Miercoles </label>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="form-check">
-                    <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" formControlName="jueves">
-                        <span class="form-check-sign">                   
-                        </span> Jueves </label>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="form-check">
-                    <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" formControlName="viernes">
-                        <span class="form-check-sign">                    
-                        </span> Viernes </label>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <div class="form-check">
-                    <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" formControlName="sabado">
-                        <span class="form-check-sign">                   
-                        </span> Sabado </label>
-                    </div>
+            <div class="row" *ngIf="onTurnos">
+                    <div class="col-10">
+                    <p class="text-success">Horarios disponibles</p>
+                        <app-listado-horarios (profesional)="profesional" [horarioSeleccion]=""></app-listado-horarios>
                 </div>
                 </div>
                 <div class="row">
